# python-evoqueclient

./: .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
evoqueclient/: client.py  shell.py  version.py
evoqueclient/common/: base.py  http.py  utils.py
evoqueclient/openstack/common/: gettextutils.py
evoqueclient/openstack/common/apiclient/: exceptions.py
evoqueclient/tests/: test_common.py
evoqueclient/v1/: client.py  shell.py  tickets.py  workflows.py
tools/: evoque.bash_completion  install_venv.py
